name:                bytestring-read
version:             0.1.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              philopon
maintainer:          philopon.dependence@gmail.com
-- copyright:           
category:            Data
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Data.ByteString.Read
  build-depends:       base       >=4.6  && <4.8
                     , bytestring >=0.10 && <0.11
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

benchmark bench
  type:                exitcode-stdio-1.0
  main-is:             bench/main.hs
  build-depends:       base
                     , bytestring-read
                     , bytestring        >=0.10 && <0.11
                     , text
                     , bytestring-lexing >=0.4  && <0.5
                     , criterion         >=1.0  && <1.1
                     , scientific
                     , attoparsec
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

test-suite tasty
  type:                exitcode-stdio-1.0
  main-is:             test/main.hs
  build-depends:       base
                     , bytestring-read
                     , bytestring        >=0.10 && <0.11
                     , tasty             >=0.10 && <0.11
                     , tasty-quickcheck  >=0.8  && <0.9
  ghc-options:         -Wall -O2
  default-language:    Haskell2010

